2005-03-31  Dean Ferreyra <dferreyra@igc.org>
	    Per Bothner  <per@bothner.com>

	* kawa/standard/module_static.java: Recognize (module-static 'init-run).

2005-03-29  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (scanForm): Don't need set save/set/restore
	current Compilation, since it's now done in LispLangauge.parse.
	* kawa/standard/require.java (makeModule): Get current Language
	directly, rather than via current Compilation.
	(makeDeclInModule): Handle non-static FieldLocation alias; now
	works since getDeclaration creates context.  Use vdecl, not fdecl.
	Only setDontDereference if referenced field is indirect.
	Set constant flag if appropriate.

	* kawa/standard/Scheme.java (builtin): Remove pointless synchronized.

2005-03-28  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java: Initalize various static fields,
	including 'instance', in a static block, so they can be final.
	(initScheme): Make private.  Remove unused proc and syn variable.
	(nullEnvironment): Initialize in <clinit>, rather than initScheme.
	* kawa/GuiConsole.java (main): Update to use Scheme.getInstance().

2005-03-25  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (find):  No longer do 'run'.
	(importDefinitions): SET EARLY_INIT on both instance and alias decls.
	No longer set DEFER_DECL_BASE.
	We now find/create the module instance at initialization time, but
	'find' no longer does 'run', so emit coe to call 'run'.
	(makeDeclInModule): If value is FieldLocation, do getDeclaration.
	This re-fixes Savannah bug #11822.

2005-03-23  Per Bothner  <per@bothner.com>

	* kawa/standard/sleep.java: Now no longer extends Procedure1.
	(apply1): Renamed to static function sleep.
	* kawa/standard/with_input_from_file.java: Remove; rewritten in Scheme.
	* kawa/standard/with_output_to_file.java: Likewise.
	* kawa/standard/Makefile.am (java_sources): Update accordingly.
	* kawa/standard/Scheme.java: Update appropriately.